force-app/main/default/objects/Evidence_Access__e/Evidence_Access__e.object-meta.xml
<CustomObject>
    <description>Auditing the auditors. Published whenever a read through EvidenceLedgerService returns subject data. See CONTRACT.md sec 8.6.</description>
    <label>Evidence Access</label>
    <pluralLabel>Evidence Accesses</pluralLabel>
</CustomObject>