force-app/main/default/objects/Evidence_Access__e/fields/Accessed_At__c.field-meta.xml
<CustomField>
    <fullName>Accessed_At__c</fullName>
    <label>Accessed At</label>
    <description>When the read occurred.</description>
    <type>DateTime</type>
</CustomField>