force-app/main/default/objects/Evidence_Access__e/fields/Accessed_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Accessed_By_Id__c</fullName>
    <label>Accessed By Id</label>
    <description>Id of the user who read the subject data.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>