force-app/main/default/objects/Evidence_Access__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <description>The access context: which facade method and query produced the read.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>