force-app/main/default/objects/Evidence_Access__e/fields/Decision_Number__c.field-meta.xml
<CustomField>
    <fullName>Decision_Number__c</fullName>
    <label>Decision Number</label>
    <description>The Decision_Record__c number that was read.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>