force-app/main/default/objects/Evidence_Access__e/fields/Ledger_Key__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Key__c</fullName>
    <label>Ledger Key</label>
    <description>The ledger key of the decision whose subject data was returned.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>