force-app/main/default/objects/Evidence_Access__e/fields/Subject_Returned__c.field-meta.xml
<CustomField>
    <fullName>Subject_Returned__c</fullName>
    <label>Subject Returned</label>
    <description>True when unredacted subject data was actually returned to the caller.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>